# rusty-code

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  errors.rs  lib.rs  traits.rs  utils.rs
src/structures/: mod.rs
src/structures/bitwise/: bitmap.rs  bitvec.rs  block.rs  mod.rs
