[package]
name = "rusty-code"
version = "0.1.0"
edition = "2024"
authors = ["Matt Hensen <hensen.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/hensen2/rusty-code"
categories = ["data-structures", "science", "algorithms"]


[dependencies]
num_cpus = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
